<resources>
    <string name="app_name">Grison for Android</string>
    <string name="prefs">Preferences</string>
    <string name="host">Host</string>
    <string name="host_summary">Camera host name or IP address</string>
    <string name="port">Port</string>
    <string name="port_summary">Camera port</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="camera_preview">Camera preview</string>
    <string name="add_a_camera_to_get_started">Add a camera to get started</string>
    <string name="add_camera_button">Add camera button</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="camera_name">Camera name</string>
    <string name="delete">Delete</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="title_activity_cam_view">CamViewActivity</string>
    <string name="camera_image">Camera image</string>
    <string name="camera_image_trans">camera_image</string>
    <string name="title_activity_cam_list">Camera List</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>

</resources>
