<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/host"
        android:key="host"
        android:summary="@string/host_summary"
        android:inputType="textUri"
        android:selectAllOnFocus="true"
        />


    <EditTextPreference
        android:title="@string/port"
        android:key="port"
        android:summary="@string/port_summary"
        android:defaultValue="80"
        android:inputType="number"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        />

    <EditTextPreference
        android:title="@string/username"
        android:key="username"
        android:selectAllOnFocus="true"
        />


    <EditTextPreference
        android:title="@string/password"
        android:key="password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

</PreferenceScreen>