<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sibilantsolutions.grisonforandroid.CamViewActivity"
    tools:showIn="@layout/activity_cam_view">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_video_call_black_24px"
        android:contentDescription="@string/camera_image" />

    <Switch
        android:id="@+id/video_on_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/video"
        android:onClick="onClickVideoSwitch"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:id="@+id/audio_on_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/audio"
        android:onClick="onClickAudioSwitch"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/video_on_switch"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
